set rcon replacement in cfg; change dl-url; dl rlg cfgs

--- a/buster/Dockerfile
+++ b/buster/Dockerfile
@@ -8,7 +8,7 @@ LABEL maintainer="walentinlamonos@gmail.com"
 ENV STEAMAPPID 232250
 ENV STEAMAPP tf
 ENV STEAMAPPDIR "${HOMEDIR}/${STEAMAPP}-dedicated"
-ENV DLURL https://raw.githubusercontent.com/CM2Walki/TF2
+ENV DLURL https://raw.githubusercontent.com/lfayoux/TF2
 
 # Run Steamcmd and install TF2
 # Create autoupdate config
